# P002_CV_Cortador_2.2mm

./: .gitignore  CMakeLists.txt  P002_CV.code-workspace
components/Encoder/: CMakeLists.txt  Encoder.c  Encoder.h
components/Motor/: CMakeLists.txt  Motor.c  Motor.h
components/Tareas/: CMakeLists.txt  task_control.c  task_control.h
components/Valvula/: CMakeLists.txt  Valvula.c  Valvula.h
main/: CMakeLists.txt  P002_CV.c
